...
        
        GeometryReader { proxy in
            VStack(alignment: .center) {
                Text("Welcome to Weather Department")
                    .font(.headline)
                HStack(alignment: .top){
                    Text("Pincode : ")
                        .font(.headline)
                        .padding(.top, 5)
                    TextField("Pincode", text: $pinCode)
                        .padding(.all,0)
                        .frame(width : 160.0, height: 30.0)
                        .border(.black)
...
                                            }else {
                                                Text("")
                                            }
                                        }
                                    }
                                }.listStyle(.plain)
                                    .accessibilityIdentifier("ForecastList")

                            }else {
                                Text(viewModel.errorMessage)
                            }
                            
                        }
...
