...
    }
    
    func fetchWeatherForeCast(pincode : String) {
        
        if pincode.isEmpty {
            self.isLoading = false
            self.errorMessage = "Empty pincode"
            return
        }
        
        self.isLoading = true
        self.weeklyWeatherForecast = []
        self.repo?.getEntity(pincode : pincode , completion: {[weak self] resource in
...
